@@ -93,42 +93,42 @@ typedef struct EORBITS
 
 const char		*	blobNames[N_BPMS] =
 {
-	"BPMS:LTU1:910:X",
-	"BPMS:LTU1:960:X",
-	"BPMS:UND1:100:X",
-	"BPMS:UND1:190:X",
-	"BPMS:UND1:290:X",
-	"BPMS:UND1:390:X",
-	"BPMS:UND1:490:X",
-	"BPMS:UND1:590:X",
-	"BPMS:UND1:690:X",
-	"BPMS:UND1:790:X",
-	"BPMS:UND1:890:X",
-	"BPMS:UND1:990:X",
-	"BPMS:UND1:1090:X",
-	"BPMS:UND1:1190:X",
-	"BPMS:UND1:1290:X",
-	"BPMS:UND1:1390:X",
-	"BPMS:UND1:1490:X",
-	"BPMS:UND1:1590:X",
-	"BPMS:UND1:1690:X",
-	"BPMS:UND1:1790:X",
-	"BPMS:UND1:1890:X",
-	"BPMS:UND1:1990:X",
-	"BPMS:UND1:2090:X",
-	"BPMS:UND1:2190:X",
-	"BPMS:UND1:2290:X",
-	"BPMS:UND1:2390:X",
-	"BPMS:UND1:2490:X",
-	"BPMS:UND1:2590:X",
-	"BPMS:UND1:2690:X",
-	"BPMS:UND1:2790:X",
-	"BPMS:UND1:2890:X",
-	"BPMS:UND1:2990:X",
-	"BPMS:UND1:3090:X",
-	"BPMS:UND1:3190:X",
-	"BPMS:UND1:3290:X",
-	"BPMS:UND1:3390:X",
+	"BPMS:LTUH:910:X",
+	"BPMS:LTUH:960:X",
+	"BPMS:UNDH:100:X",
+	"BPMS:UNDH:190:X",
+	"BPMS:UNDH:290:X",
+	"BPMS:UNDH:390:X",
+	"BPMS:UNDH:490:X",
+	"BPMS:UNDH:590:X",
+	"BPMS:UNDH:690:X",
+	"BPMS:UNDH:790:X",
+	"BPMS:UNDH:890:X",
+	"BPMS:UNDH:990:X",
+	"BPMS:UNDH:1090:X",
+	"BPMS:UNDH:1190:X",
+	"BPMS:UNDH:1290:X",
+	"BPMS:UNDH:1390:X",
+	"BPMS:UNDH:1490:X",
+	"BPMS:UNDH:1590:X",
+	"BPMS:UNDH:1690:X",
+	"BPMS:UNDH:1790:X",
+	"BPMS:UNDH:1890:X",
+	"BPMS:UNDH:1990:X",
+	"BPMS:UNDH:2090:X",
+	"BPMS:UNDH:2190:X",
+	"BPMS:UNDH:2290:X",
+	"BPMS:UNDH:2390:X",
+	"BPMS:UNDH:2490:X",
+	"BPMS:UNDH:2590:X",
+	"BPMS:UNDH:2690:X",
+	"BPMS:UNDH:2790:X",
+	"BPMS:UNDH:2890:X",
+	"BPMS:UNDH:2990:X",
+	"BPMS:UNDH:3090:X",
+	"BPMS:UNDH:3190:X",
+	"BPMS:UNDH:3290:X",
+	"BPMS:UNDH:3390:X",
 };
 
 static epicsEventId eOrbitsSyncEvent = NULL;
