@@ -1,19 +1,20 @@
 #==============================================================================
-# RELEASE_SITE Location of EPICS_SITE_TOP, EPICS_MODULES, and BASE_MODULE_VERSION
+#RELEASE Location of external products
 # Run "gnumake clean uninstall install" in the application
 # top directory each time this file is changed.
 
 #==============================================================================
-BASE_MODULE_VERSION=R7.0.3.1-1.0
+# Define the top of the EPICS tree for your site.
+# We will build some tools/scripts that allow us to
+# change this easily when relocating software.
+#==============================================================================
 EPICS_SITE_TOP=/afs/slac/g/lcls/epics
 BASE_SITE_TOP=/afs/slac/g/lcls/epics/base
-MODULES_SITE_TOP=/afs/slac/g/lcls/epics/R7.0.3.1-1.0/modules
-EPICS_MODULES=/afs/slac/g/lcls/epics/R7.0.3.1-1.0/modules
+MODULES_SITE_TOP=/afs/slac/g/lcls/epics/modules/R3-14-12
 IOC_SITE_TOP=/afs/slac/g/lcls/epics/iocTop
-EPICS_BASE_VER=R7.0.3.1-1.0
+EPICS_BASE_VER=base-R3-14-12
 PACKAGE_SITE_TOP=/afs/slac/g/lcls/package
 MATLAB_PACKAGE_TOP=/afs/slac/g/lcls/package/matlab
-PSPKG_ROOT=/afs/slac/g/lcls/pkg_mgr
 TOOLS_SITE_TOP=/afs/slac/g/lcls/tools
 ALARM_CONFIGS_TOP=/afs/slac/g/lcls/tools/AlarmConfigsTop
 #==============================================================================
