@@ -43,18 +43,22 @@ EPICS_MODULES=$(MODULES_SITE_TOP)
 # IOC apps or other Support apps
 # =============================================================
 
-SEQ_MODULE_VERSION=seq-R2-1-6_1-3
-AUTOSAVE_MODULE_VERSION=autosave-R5-5_0-0
-CAPUTLOG_MODULE_VERSION=caPutLog-R3-4_1-0
-IOCADMIN_MODULE_VERSION=iocAdmin-R3-1-14_1-0
-DIAGTIMER_MODULE_VERSION=diagTimer-R1-8-0
-MISCUTILS_MODULE_VERSION=miscUtils-R2-2-3
-EVENT_MODULE_VERSION=event-R4-2-4
-EVRCLIENT_MODULE_VERSION=evrClient-R1-0-p7
-UDPCOMM_MODULE_VERSION=udpComm-R2-7-1
-FCOM_MODULE_VERSION=fcom-R1-3-34
-FCOMUTIL_MODULE_VERSION=fcomUtil-R1-2-4
-#FCOMUTIL_MODULE_VERSION=MAIN_TRUNK
+SEQ_MODULE_VERSION       = seq-R2-1-6_1-3
+AUTOSAVE_MODULE_VERSION  = autosave-R5-5_0-0
+CAPUTLOG_MODULE_VERSION  = caPutLog-R3-4_1-0
+IOCADMIN_MODULE_VERSION  = iocAdmin-R3-1-14_1-0
+DIAGTIMER_MODULE_VERSION = diagTimer-R1-8-0
+MISCUTILS_MODULE_VERSION = miscUtils-R2-2-3
+#EVENT_MODULE_VERSION     = event-R4-2-4
+EVENT_MODULE_VERSION     = event-R4-2-5-CLTS-R3
+EVRCLIENT_MODULE_VERSION = evrClient-R1-0-p7
+#UDPCOMM_MODULE_VERSION   = udpComm-R2-7-1
+UDPCOMM_MODULE_VERSION   = udpComm-R2-7-1-BR-1
+#FCOM_MODULE_VERSION      = fcom-R1-3-34
+FCOM_MODULE_VERSION      = fcom-R1-3-35-BR-2
+#FCOMUTIL_MODULE_VERSION  = fcomUtil-R1-2-4
+FCOMUTIL_MODULE_VERSION  = fcomUtil-R1-2-4-BR-2
+#FCOMUTIL_MODULE_VERSION = MAIN_TRUNK
 
 DEVBUSMAPPED_MODULE_VERSION=devBusMapped-R3-1-1
 
